--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,21 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: "Jack"
+minimal_mistakes_skin: dark
+locale: "en-US"
+
+title: "Jack H. Park | Personal Landing Page"
+subtitle: "Version 0.1"
+name: &myname "Jack H. Park"
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Welcome to *myname 'ss personal landing page.
+  Jack is a strategic product manager focusing on enterprise security.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://jackpark.me" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username: jekyll
+github_username: jack-h-park
+
 
 # Build settings
 # theme: minima # 원래는 이랬는데 아래처럼 바꿈
