--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Welcome to *myname 'ss personal landing page.
   Jack is a strategic product manager focusing on enterprise security.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/landing" # the subpath of your site, e.g. /blog
 url: "https://jackpark.me" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username: jack-h-park
